src/client/qwaylandintegration.cpp
@@ -208,11 +208,9 @@ void QWaylandIntegration::initializePlatform()
 
 void QWaylandIntegration::initialize()
 {
-    int fd = wl_display_get_fd(mDisplay->wl_display());
-    QSocketNotifier *sn = new QSocketNotifier(fd, QSocketNotifier::Read, mDisplay.data());
-    QObject::connect(sn, SIGNAL(activated(QSocketDescriptor)), mDisplay.data(), SLOT(flushRequests()));
+    mDisplay->initEventThread();
 
-    // Call this after eventDispatcher is connected with QSocketNotifier for QWaylandDisplay::forceRoundTrip()
+    // Call this after initializing event thread for QWaylandDisplay::forceRoundTrip()
     initializePlatform();
 
     // But the aboutToBlock() and awake() should be connected after initializePlatform().
